# neopika

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: advanced.md  contributing.md  extending.md  index.md  installation.md  reference.md  tutorial.md
docs/api/: analytics.md  dialects.md  enums.md  functions.md  pseudocolumns.md  queries.md  terms.md  utils.md
neopika/: __init__.py  analytics.py  dialects.py  functions.py  queries.py  terms.py  utils.py
neopika/clickhouse/: array.py  condition.py  dates_and_times.py  nullable_arg.py  search_string.py  type_conversion.py
neopika/tests/: test_aggregate.py  test_analytic_queries.py  test_create.py  test_criterions.py  test_custom_functions.py  test_data_types.py  test_date_math.py  test_deletes.py  test_drop.py  test_formats.py  test_functions.py  test_groupby_modifiers.py  test_immutability.py  test_inserts.py  test_internals.py  test_joins.py  test_negation.py  test_parameter.py  test_pseudocolumns.py  test_query.py  test_selects.py  test_tables.py  test_terms.py  test_tuples.py  test_updates.py  test_utils.py
neopika/tests/clickhouse/: test_array.py  test_condition.py  test_dates_and_times.py  test_nullable_arg.py  test_search_string.py  test_type_conversion.py
neopika/tests/dialects/: test_clickhouse.py  test_mssql.py  test_mysql.py  test_oracle.py  test_postgresql.py  test_snowflake.py  test_sqllite.py  test_vertica.py
