[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NeoPika"
dynamic = ["version"]
description = "A SQL query builder API for Python"
readme = "README.rst"
authors = [
    { name = "Timothy Heys", email = "theys@kayak.com" },
]
license = { text = "Apache License Version 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: PL/SQL",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
keywords = [
    "neopika",
    "python",
    "query builder",
    "querybuilder",
    "sql",
    "mysql",
    "postgres",
    "psql",
    "oracle",
    "vertica",
    "aggregated",
    "relational database",
    "rdbms",
    "business analytics",
    "bi",
    "data science",
    "analysis",
    "pandas",
    "orm",
    "object mapper",
]
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
  "Sphinx==1.6.5",
  "sphinx-rtd-theme==0.2.4",
  "bumpversion==0.5.3",
  "jinja2==3.0.3",
  "numpydoc==1.1.0",
  "parameterized==0.7.0",
  "tox>=4.24",
  "tox-uv>=1.20",
  "coverage==5.1",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-include-markdown-plugin>=7.1.2",
  "mkdocs-material>=9.6.1",
  "mkdocstrings[python]>=0.27.0",
  "pymdown-extensions>=10.14.3",
]

[project.urls]
Homepage = "https://github.com/kayak/neopika"

[tool.hatch.version]
path = "neopika/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["neopika"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py310, py311, py312, py313, py314
isolated_build = True

[testenv]
runner = uv-venv-runner
deps =
    parameterized==0.7.0
    coverage==5.1
commands =
    python -m coverage run -m unittest discover neopika.tests
    coverage report -m
"""


