[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NeoPika"
version = "0.49.0"
description = "A SQL query builder API for Python"
readme = "README.md"
license = { text = "Apache License Version 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: PL/SQL",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
keywords = [
    "neopika",
    "python",
    "query builder",
    "querybuilder",
    "sql",
    "mysql",
    "postgres",
    "psql",
    "oracle",
    "vertica",
    "aggregated",
    "relational database",
    "rdbms",
    "business analytics",
    "bi",
    "data science",
    "analysis",
    "pandas",
    "orm",
    "object mapper",
]
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
  "Sphinx==1.6.5",
  "sphinx-rtd-theme==0.2.4",
  "bumpversion==0.5.3",
  "jinja2==3.0.3",
  "numpydoc==1.1.0",
  "parameterized==0.7.0",
  "tox>=4.24",
  "tox-uv>=1.20",
  "coverage==5.1",
  "ruff>=0.9",
  "pre-commit == 2.17.*",
  "commitizen == 3.2.*",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-include-markdown-plugin>=7.1.2",
  "mkdocs-material>=9.6.1",
  "mkdocstrings[python]>=0.27.0",
  "pymdown-extensions>=10.14.3",
]

[project.urls]
Homepage = "https://github.com/kayak/neopika"

[tool.hatch.version]
path = "neopika/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["neopika"]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["F", "I", "T"]
ignore = ["E501", "F841"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py310, py311, py312, py313, py314
isolated_build = True

[testenv]
runner = uv-venv-runner
deps =
    parameterized==0.7.0
    coverage==5.1
commands =
    python -m coverage run -m unittest discover neopika.tests
    coverage report -m
"""

[tool.pyright]
venvPath = "."
venv = ".venv"
reportIncompatibleVariableOverride = false

[tool.commitizen]
update_changelog_on_bump = false
bump_message = "bump: $current_version → $new_version"
changelog_incremental = false
changelog_merge_prerelease = true
version_provider = "pep621"
